--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
-  }
+  },
+  "engines": {
+    "node": "16.15.1"
+  },
 }
